--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         });
 
         // load mapping
-        $.getJSON("merkit_map.json", function (json) {
+        $.getJSON("https://cdn.rawgit.com/jikuja/liikennemerkkinumerot/master/merkit_map.json", function (json) {
             signMapping = json;
         });
 
